--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -92,28 +92,43 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RBz-02-GYo">
                                 <rect key="frame" x="0.0" y="40" width="375" height="45"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jz1-i1-VbH">
-                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="45"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                        <state key="normal" title="PAST">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="closeChatButtonClicked:" destination="BSK-9a-rMw" eventType="touchUpInside" id="HUp-E1-H0b"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jhg-AU-1GF">
-                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="45"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                        <state key="normal" title="ONGOING">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="openChatButtonClicked:" destination="BSK-9a-rMw" eventType="touchUpInside" id="ao8-jx-3e9"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wM1-De-4id">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jhg-AU-1GF">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="44.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <state key="normal" title="DEFAULT">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="defaultChatButtonClicked:" destination="BSK-9a-rMw" eventType="touchUpInside" id="KHW-IG-lRs"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ga-mT-ZkG">
+                                                <rect key="frame" x="125" y="0.0" width="125" height="44.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <state key="normal" title="BROADCAST">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="broadcastChatButtonClicked:" destination="BSK-9a-rMw" eventType="touchUpInside" id="tNe-m2-VCw"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jz1-i1-VbH">
+                                                <rect key="frame" x="250" y="0.0" width="125" height="44.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <state key="normal" title="P2P">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="p2pChatButtonClicked:" destination="BSK-9a-rMw" eventType="touchUpInside" id="nK4-90-SZc"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3vq-9g-2le">
-                                        <rect key="frame" x="0.0" y="42" width="187.5" height="3"/>
+                                        <rect key="frame" x="0.0" y="43.5" width="124" height="3"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="3" id="Dul-3a-Opj"/>
@@ -129,22 +144,17 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="jz1-i1-VbH" secondAttribute="bottom" id="13e-ND-B84"/>
-                                    <constraint firstItem="Jhg-AU-1GF" firstAttribute="top" secondItem="RBz-02-GYo" secondAttribute="top" id="4lm-Cf-zHv"/>
-                                    <constraint firstItem="Jhg-AU-1GF" firstAttribute="leading" secondItem="RBz-02-GYo" secondAttribute="leading" id="CZn-Rd-75c"/>
-                                    <constraint firstItem="3vq-9g-2le" firstAttribute="width" secondItem="Jhg-AU-1GF" secondAttribute="width" id="DGS-Ed-3xU"/>
-                                    <constraint firstAttribute="trailing" secondItem="jz1-i1-VbH" secondAttribute="trailing" id="Et8-5l-Meg"/>
-                                    <constraint firstAttribute="bottom" secondItem="Jhg-AU-1GF" secondAttribute="bottom" id="NRn-ej-JYU"/>
-                                    <constraint firstItem="jz1-i1-VbH" firstAttribute="leading" secondItem="Jhg-AU-1GF" secondAttribute="trailing" id="QzO-q9-cUI"/>
+                                    <constraint firstItem="3vq-9g-2le" firstAttribute="centerY" secondItem="WEG-tx-6Ms" secondAttribute="centerY" id="5Gg-Zm-acB"/>
+                                    <constraint firstAttribute="trailing" secondItem="wM1-De-4id" secondAttribute="trailing" id="Hbi-Zq-BMX"/>
+                                    <constraint firstItem="wM1-De-4id" firstAttribute="top" secondItem="RBz-02-GYo" secondAttribute="top" id="IQb-ge-Tov"/>
                                     <constraint firstItem="3vq-9g-2le" firstAttribute="leading" secondItem="RBz-02-GYo" secondAttribute="leading" id="SIb-Mw-reC"/>
+                                    <constraint firstItem="3vq-9g-2le" firstAttribute="width" secondItem="wM1-De-4id" secondAttribute="width" multiplier="0.33" id="Vqg-tU-hpS"/>
                                     <constraint firstAttribute="bottom" secondItem="WEG-tx-6Ms" secondAttribute="bottom" id="WIF-Qg-JGG"/>
+                                    <constraint firstItem="WEG-tx-6Ms" firstAttribute="top" secondItem="wM1-De-4id" secondAttribute="bottom" id="f87-qo-wI7"/>
+                                    <constraint firstItem="wM1-De-4id" firstAttribute="leading" secondItem="RBz-02-GYo" secondAttribute="leading" id="g0d-sm-IDO"/>
                                     <constraint firstAttribute="height" constant="45" id="giE-sL-4uo"/>
                                     <constraint firstAttribute="trailing" secondItem="WEG-tx-6Ms" secondAttribute="trailing" id="hxe-gq-jel"/>
-                                    <constraint firstItem="jz1-i1-VbH" firstAttribute="top" secondItem="RBz-02-GYo" secondAttribute="top" id="jZW-1Q-qSD"/>
-                                    <constraint firstItem="jz1-i1-VbH" firstAttribute="width" secondItem="Jhg-AU-1GF" secondAttribute="width" id="kVc-fd-Rpx"/>
                                     <constraint firstItem="WEG-tx-6Ms" firstAttribute="leading" secondItem="RBz-02-GYo" secondAttribute="leading" id="m7G-ph-cBh"/>
-                                    <constraint firstItem="jz1-i1-VbH" firstAttribute="leading" secondItem="Jhg-AU-1GF" secondAttribute="trailing" id="tlX-ne-mhZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="3vq-9g-2le" secondAttribute="bottom" id="zzn-FH-Qxr"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YFU-ux-sP4" userLabel="errorContentView">
@@ -236,7 +246,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIR-jl-nos">
-                                                            <rect key="frame" x="96" y="40" width="64" height="17"/>
+                                                            <rect key="frame" x="96" y="40" width="63.5" height="16.5"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
@@ -377,14 +387,15 @@
                     <connections>
                         <outlet property="bottomLineView" destination="3vq-9g-2le" id="PO3-ag-Jle"/>
                         <outlet property="bottomViewLeadingConstraint" destination="SIb-Mw-reC" id="ap7-b5-QyA"/>
+                        <outlet property="broadcastChatButton" destination="9ga-mT-ZkG" id="EAa-kb-SfO"/>
                         <outlet property="buttonContainerView" destination="RBz-02-GYo" id="ZDF-QX-0qH"/>
                         <outlet property="buttonContainerViewHeightConstraint" destination="giE-sL-4uo" id="hTg-03-P7O"/>
-                        <outlet property="closeChatButton" destination="jz1-i1-VbH" id="zCq-KM-RD4"/>
+                        <outlet property="defaultChatButton" destination="Jhg-AU-1GF" id="TZm-Sg-Wpr"/>
                         <outlet property="errorContentView" destination="YFU-ux-sP4" id="1ho-lo-F4O"/>
                         <outlet property="errorLabel" destination="V3O-vI-NXz" id="IhV-mP-vxC"/>
                         <outlet property="height_ErrorLabel" destination="XbD-E2-PYE" id="uMg-zg-jfT"/>
                         <outlet property="newConversationBiutton" destination="TLz-yO-8eF" id="ebV-X1-ePj"/>
-                        <outlet property="openChatButton" destination="Jhg-AU-1GF" id="TZm-Sg-Wpr"/>
+                        <outlet property="p2pChatButton" destination="jz1-i1-VbH" id="zCq-KM-RD4"/>
                         <outlet property="showConversationsTableView" destination="vat-na-7yK" id="mS9-xq-7Nj"/>
                         <outlet property="view_NavigationBar" destination="AGz-KM-Bgo" id="Fbg-UJ-blX"/>
                         <outlet property="view_NewConversationBtn" destination="Eou-zT-IiY" id="Sf6-lI-Hax"/>
