--- a/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
@@ -1,49 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="383" id="KGk-i7-Jjw" customClass="IncomingImageCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="550" height="396"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="440" id="KGk-i7-Jjw" customClass="IncomingImageCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="560" height="453"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="550" height="396"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="560" height="453"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OXQ-z8-zBV" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="45" y="4.5" width="348.5" height="390"/>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OXQ-z8-zBV" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="45" y="3.5" width="355.5" height="449"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXK-iW-0ll" userLabel="MainContentView" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="45.5" y="5" width="347.5" height="389"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GXK-iW-0ll" userLabel="MainContentView" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="45.5" y="5" width="354.5" height="446"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="RBB-P6-fLK" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="5" y="5" width="337.5" height="250"/>
+                                <rect key="frame" x="5" y="5" width="344.5" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="amB-Pe-LNS"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmd-BQ-3pI">
-                                <rect key="frame" x="5" y="5" width="337.5" height="250"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmd-BQ-3pI">
+                                <rect key="frame" x="5" y="5" width="344.5" height="250"/>
                                 <connections>
                                     <action selector="imageTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ipu-43-eHU"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CD8-Gg-roQ">
-                                <rect key="frame" x="5" y="255" width="337.5" height="33"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L9Y-BK-8bO" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="150" y="171" width="47" height="47"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L9Y-BK-8bO" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="154" y="199.5" width="47" height="47"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="47" id="BZI-Ff-Chr"/>
@@ -51,7 +45,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gk0-zx-Kg9">
-                                <rect key="frame" x="316" y="372" width="26.5" height="12"/>
+                                <rect key="frame" x="323" y="260" width="26.5" height="12"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="0Rj-i7-FOF"/>
@@ -60,8 +54,8 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0z-54-U05">
-                                <rect key="frame" x="123.5" y="110" width="100" height="40"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0z-54-U05">
+                                <rect key="frame" x="127.5" y="110" width="100" height="40"/>
                                 <color key="backgroundColor" red="0.31764705879999999" green="0.2666666667" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="28d-tM-jmg"/>
@@ -92,24 +86,21 @@
                             <constraint firstAttribute="trailing" secondItem="gk0-zx-Kg9" secondAttribute="trailing" constant="5" id="WuB-56-NFq"/>
                             <constraint firstItem="hmd-BQ-3pI" firstAttribute="trailing" secondItem="RBB-P6-fLK" secondAttribute="trailing" id="bZp-ra-vFz"/>
                             <constraint firstItem="hmd-BQ-3pI" firstAttribute="leading" secondItem="RBB-P6-fLK" secondAttribute="leading" id="cGo-eR-Vgn"/>
-                            <constraint firstItem="gk0-zx-Kg9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CD8-Gg-roQ" secondAttribute="bottom" constant="5" id="cSQ-tF-qj0"/>
                             <constraint firstAttribute="trailing" secondItem="RBB-P6-fLK" secondAttribute="trailing" constant="5" id="cde-gE-eRe"/>
-                            <constraint firstItem="CD8-Gg-roQ" firstAttribute="leading" secondItem="RBB-P6-fLK" secondAttribute="leading" id="dT7-kL-eHO"/>
                             <constraint firstItem="hmd-BQ-3pI" firstAttribute="bottom" secondItem="RBB-P6-fLK" secondAttribute="bottom" id="hPr-W9-G8j"/>
-                            <constraint firstItem="CD8-Gg-roQ" firstAttribute="top" secondItem="RBB-P6-fLK" secondAttribute="bottom" id="hqj-R8-ZDK"/>
+                            <constraint firstItem="gk0-zx-Kg9" firstAttribute="top" secondItem="RBB-P6-fLK" secondAttribute="bottom" constant="5" id="hcn-Cv-UIH"/>
                             <constraint firstItem="RBB-P6-fLK" firstAttribute="top" secondItem="GXK-iW-0ll" secondAttribute="top" constant="5" id="ouB-8k-Hwf"/>
                             <constraint firstItem="L9Y-BK-8bO" firstAttribute="centerX" secondItem="GXK-iW-0ll" secondAttribute="centerX" id="q4V-ME-4pQ"/>
-                            <constraint firstItem="CD8-Gg-roQ" firstAttribute="trailing" secondItem="RBB-P6-fLK" secondAttribute="trailing" id="ri5-Qg-u6f"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XiW-Yp-hld">
-                        <rect key="frame" x="393" y="193" width="157" height="10"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XiW-Yp-hld">
+                        <rect key="frame" x="400" y="221.5" width="160" height="10"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="10" id="eYc-dm-i8U"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z8x-Ix-NYt">
-                        <rect key="frame" x="393" y="369" width="25" height="25"/>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z8x-Ix-NYt">
+                        <rect key="frame" x="400" y="426" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="fNd-9V-NYT"/>
                             <constraint firstAttribute="width" secondItem="Z8x-Ix-NYt" secondAttribute="height" multiplier="1:1" id="fZ4-My-ipf"/>
@@ -152,12 +143,11 @@
                 <outlet property="senderImageWidthConstraint" destination="xe2-5R-CR5" id="PGF-Tm-Dwo"/>
                 <outlet property="shadowView" destination="OXQ-z8-zBV" id="mhb-gY-r0C"/>
                 <outlet property="sourceIcon" destination="Z8x-Ix-NYt" id="fhj-wo-QlI"/>
-                <outlet property="textView" destination="CD8-Gg-roQ" id="LMd-5P-LXN"/>
                 <outlet property="thumbnailImageView" destination="RBB-P6-fLK" id="xQl-wY-ZNQ"/>
                 <outlet property="timeLabel" destination="gk0-zx-Kg9" id="vCD-JJ-iW9"/>
                 <outlet property="topConstraint" destination="pmf-4I-rcB" id="Mnp-Ya-9j5"/>
             </connections>
-            <point key="canvasLocation" x="-230.40000000000001" y="20.689655172413794"/>
+            <point key="canvasLocation" x="-222.40000000000001" y="46.326836581709152"/>
         </tableViewCell>
     </objects>
     <resources>
